--- a/journeyClean_portsInfo.ipynb
+++ b/journeyClean_portsInfo.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "\n",
     "# Project WP1-2\n",
-    "### code 1.Clean journey and remove duplicates\n",
+    "### code 1: Clean journey and remove duplicates\n",
     "<span style='font-family:\"Times New Roman\"'> <span styel=''> \n",
     "This code is used to extract the \"PortList.csv\" information from \"fleet_trade_journeys.csv\"; \n",
     "Duplicate terminals are defined as terminals with the same names but in different countries. There are 38 duplicated entries in the dataset \"PortList.xlsx\" from Gang, which needs to be improved;\n",
