--- a/journeyPorts_group_display.ipynb
+++ b/journeyPorts_group_display.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,31 +30,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Group terminals in a given radisu (e.g., 100 nm), and then sort terminals by the number of port calls in descent order. Define a terminal as a port if there is no port within 100 nm. "
+    "\n",
+    "# Project WP1-2\n",
+    "### code 2: Display, and group ports\n",
+    "<span style='font-family:\"Times New Roman\"'> <span styel=''> \n",
+    "This code is used to group terminals by given radius (e.g., 100 nm), and to add extra features \"Port\" and \"Region\".\n",
+    "The working datset in this sheet is \"PortList.csv\";\n",
+    "### Basic steps: \n",
+    "    a) Load data;\n",
+    "    b) \n",
+    "    c) \n",
+    "    d) \n",
+    "    e) Save the cleaned dataset"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the shape of ports are: (3288, 7)\n"
-     ]
-    }
-   ],
    "source": [
-    "df_ports=pd.read_csv(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/portsInfo.csv\")\n",
-    "#df_ports=df_ports.reset_index()\n",
-    "print (\"the shape of ports are:\",df_ports.shape)"
+    "###  Step a) : Load data, and display ports info in geographic map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -74,17 +73,49 @@
       " 5   number of call end    3288 non-null   float64\n",
       " 6   number of call all    3288 non-null   float64\n",
       "dtypes: float64(5), object(2)\n",
-      "memory usage: 179.9+ KB\n"
+      "memory usage: 179.9+ KB\n",
+      "None\n",
+      "----------------------------------------------------------------------------------------------------------------------\n",
+      "The statistic information of portsInfor:\n",
+      "\n",
+      "                       count        mean         std        min        25%  \\\n",
+      "Lat                   3288.0   22.971758   25.946251  -53.27303   6.957058   \n",
+      "Lon                   3288.0   21.931035   78.278837 -171.76240 -45.415307   \n",
+      "number of call start  3288.0  152.461071  360.566504    0.00000   4.000000   \n",
+      "number of call end    3288.0  151.939477  359.722360    0.00000   4.000000   \n",
+      "number of call all    3288.0  304.400547  720.274424    1.00000   8.000000   \n",
+      "\n",
+      "                            50%         75%          max  \n",
+      "Lat                   29.307935   40.842015     76.55333  \n",
+      "Lon                   17.801945  103.028567    179.36674  \n",
+      "number of call start  24.000000  134.000000   7403.00000  \n",
+      "number of call end    24.000000  133.000000   7365.00000  \n",
+      "number of call all    48.000000  267.250000  14768.00000  \n",
+      "----------------------------------------------------------------------------------------------------------------------\n",
+      "The shape of portsInfo file: (3288, 7)\n",
+      "----------------------------------------------------------------------------------------------------------------------\n",
+      "The features names of portsInfor:\n",
+      " ['Terminal', 'Country', 'Lat', 'Lon', 'number of call start', 'number of call end', 'number of call all']\n",
+      "----------------------------------------------------------------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "df_ports.info()"
+    "df_ports=pd.read_csv(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/portsInfo.csv\")\n",
+    "print (df_ports.info())\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"The statistic information of portsInfor:\\n\")\n",
+    "print (df_ports.describe().T)\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"The shape of portsInfo file:\",df_ports.shape)\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"The features names of portsInfor:\\n\",df_ports.columns.to_list())\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +219,7 @@
        "4                3371.0              3375.0              6746.0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,281 +229,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Terminal', 'Country', 'Lat', 'Lon', 'number of call start',\n",
-      "       'number of call end', 'number of call all'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
    "source": [
-    "print (df_ports.columns)"
+    "### display ports data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Lat</th>\n",
-       "      <td>3288.0</td>\n",
-       "      <td>22.971758</td>\n",
-       "      <td>25.946251</td>\n",
-       "      <td>-53.27303</td>\n",
-       "      <td>6.957058</td>\n",
-       "      <td>29.307935</td>\n",
-       "      <td>40.842015</td>\n",
-       "      <td>76.55333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lon</th>\n",
-       "      <td>3288.0</td>\n",
-       "      <td>21.931035</td>\n",
-       "      <td>78.278837</td>\n",
-       "      <td>-171.76240</td>\n",
-       "      <td>-45.415307</td>\n",
-       "      <td>17.801945</td>\n",
-       "      <td>103.028567</td>\n",
-       "      <td>179.36674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>number of call start</th>\n",
-       "      <td>3288.0</td>\n",
-       "      <td>152.461071</td>\n",
-       "      <td>360.566504</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>134.000000</td>\n",
-       "      <td>7403.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>number of call end</th>\n",
-       "      <td>3288.0</td>\n",
-       "      <td>151.939477</td>\n",
-       "      <td>359.722360</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>133.000000</td>\n",
-       "      <td>7365.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>number of call all</th>\n",
-       "      <td>3288.0</td>\n",
-       "      <td>304.400547</td>\n",
-       "      <td>720.274424</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>48.000000</td>\n",
-       "      <td>267.250000</td>\n",
-       "      <td>14768.00000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       count        mean         std        min        25%  \\\n",
-       "Lat                   3288.0   22.971758   25.946251  -53.27303   6.957058   \n",
-       "Lon                   3288.0   21.931035   78.278837 -171.76240 -45.415307   \n",
-       "number of call start  3288.0  152.461071  360.566504    0.00000   4.000000   \n",
-       "number of call end    3288.0  151.939477  359.722360    0.00000   4.000000   \n",
-       "number of call all    3288.0  304.400547  720.274424    1.00000   8.000000   \n",
-       "\n",
-       "                            50%         75%          max  \n",
-       "Lat                   29.307935   40.842015     76.55333  \n",
-       "Lon                   17.801945  103.028567    179.36674  \n",
-       "number of call start  24.000000  134.000000   7403.00000  \n",
-       "number of call end    24.000000  133.000000   7365.00000  \n",
-       "number of call all    48.000000  267.250000  14768.00000  "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Check other information of the dataset\n",
-    "df_ports.describe().T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coatzacoalcos                                 1\n",
-      "San Lorenzo_Honduras                          1\n",
-      "Killini                                       1\n",
-      "Cul de Sac Bay                                1\n",
-      "Port Hawkesbury                               1\n",
-      "                                             ..\n",
-      "Bayuquan                                      1\n",
-      "Santo Tomas De Castilla Container Terminal    1\n",
-      "Puerto Castilla                               1\n",
-      "Pasir Gudang Dry Bulk Terminal                1\n",
-      "Phillips 66 Clifton Ridge Marine Terminal     1\n",
-      "Name: Terminal, Length: 3288, dtype: int64\n",
-      "\n",
-      "\n",
-      "United States of America          351\n",
-      "China                             221\n",
-      "Brazil                            111\n",
-      "Indonesia                         108\n",
-      "Australia                         103\n",
-      "                                 ... \n",
-      "DR Congo                            1\n",
-      "Martinique                          1\n",
-      "British Indian Ocean Territory      1\n",
-      "Suriname                            1\n",
-      "Marshall Islands                    1\n",
-      "Name: Country, Length: 155, dtype: int64\n",
-      "\n",
-      "\n",
-      " 45.61220    2\n",
-      " 29.91197    2\n",
-      "-20.93150    2\n",
-      " 42.63367    2\n",
-      " 51.26755    2\n",
-      "            ..\n",
-      " 26.71710    1\n",
-      " 45.61123    1\n",
-      " 39.85693    1\n",
-      " 34.14651    1\n",
-      "-2.84375     1\n",
-      "Name: Lat, Length: 3279, dtype: int64\n",
-      "\n",
-      "\n",
-      " 133.07173    2\n",
-      " 112.65383    2\n",
-      " 135.42885    2\n",
-      "-70.28080     2\n",
-      " 120.61545    2\n",
-      "             ..\n",
-      " 7.84442      1\n",
-      " 27.16878     1\n",
-      "-90.91164     1\n",
-      "-0.25083      1\n",
-      " 67.31467     1\n",
-      "Name: Lon, Length: 3282, dtype: int64\n",
-      "\n",
-      "\n",
-      "1.0       372\n",
-      "2.0       221\n",
-      "3.0       132\n",
-      "4.0       102\n",
-      "6.0        81\n",
-      "         ... \n",
-      "312.0       1\n",
-      "270.0       1\n",
-      "296.0       1\n",
-      "268.0       1\n",
-      "1784.0      1\n",
-      "Name: number of call start, Length: 628, dtype: int64\n",
-      "\n",
-      "\n",
-      "1.0       376\n",
-      "2.0       226\n",
-      "3.0       140\n",
-      "4.0       108\n",
-      "5.0        86\n",
-      "         ... \n",
-      "376.0       1\n",
-      "482.0       1\n",
-      "312.0       1\n",
-      "425.0       1\n",
-      "1712.0      1\n",
-      "Name: number of call end, Length: 630, dtype: int64\n",
-      "\n",
-      "\n",
-      "2.0       348\n",
-      "4.0       205\n",
-      "6.0       107\n",
-      "8.0        83\n",
-      "10.0       72\n",
-      "         ... \n",
-      "392.0       1\n",
-      "424.0       1\n",
-      "440.0       1\n",
-      "456.0       1\n",
-      "3072.0      1\n",
-      "Name: number of call all, Length: 866, dtype: int64\n",
-      "\n",
-      "\n",
-      "No duplicate terminals\n"
-     ]
-    }
-   ],
-   "source": [
-    "# check the counts of values in each column.\n",
-    "def check_valsCount(df):\n",
-    "    cols=df.columns\n",
-    "    counts_all=[]\n",
-    "    for col in cols:\n",
-    "        counts=df.loc[:,col].value_counts()\n",
-    "        counts_all.append(counts)\n",
-    "        print (counts)\n",
-    "        print ('\\n')\n",
-    "    return counts_all\n",
-    "counts_all=check_valsCount(df_ports)\n",
-    "print (\"No duplicate terminals\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
    "outputs": [],
    "source": [
     "def draw_map(m, scale=0.5):\n",
+    "    \"\"\"\n",
+    "    plot backgroud map\n",
+    "    m: Basemap object\n",
+    "    scale: plot scale\n",
+    "    \n",
+    "    return: plot a backgroud map\n",
+    "    \"\"\"\n",
     "    # draw a shaded-relief image\n",
     "    m.shadedrelief(scale=scale)\n",
     "    #m.bluemarble(scale=scale)  #Project NASA's blue marble image onto the map\n",
@@ -489,20 +267,49 @@
     "    \n",
     "    # cycle through these lines and set the desired style\n",
     "    for line in all_lines:\n",
-    "        line.set(linestyle='-', alpha=0.3, color='w')"
+    "        line.set(linestyle='-', alpha=0.3, color='w')\n",
+    "\n",
+    "def check_valsCount(df):\n",
+    "    \"\"\"\n",
+    "    Check values counts in given dataframe\n",
+    "    return: counts of each column in given dataframe\n",
+    "    \"\"\"\n",
+    "    cols=df.columns\n",
+    "    counts_all=[]\n",
+    "    for col in cols:\n",
+    "        counts=df.loc[:,col].value_counts()\n",
+    "        counts_all.append(counts)\n",
+    "        print (counts)\n",
+    "        print ('\\n')\n",
+    "    return counts_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dutch Harbor                           1\n",
+      "Krishnapatnam Coal Terminal            1\n",
+      "Iraklion                               1\n",
+      "Grain Bulk Handlers Terminal           1\n",
+      "Setubal                                1\n",
+      "                                      ..\n",
+      "Longxue                                1\n",
+      "Durban Point Multi-Purpose Terminal    1\n",
+      "Kordin Grain Terminal                  1\n",
+      "Union Oil Terminal                     1\n",
+      "CUFL Jetty                             1\n",
+      "Name: Terminal, Length: 3288, dtype: int64\n",
+      "\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------------------------\n",
+      "No duplicate terminals any more !\n",
+      "----------------------------------------------------------------------------------------------------------------------\n",
       "The respective minimum and maximum latitude and longitude coordiates of ports are: (-53.27303000000001, 76.55333, -171.7624, 179.36674)\n"
      ]
     },
@@ -518,7 +325,14 @@
     }
    ],
    "source": [
-    "# visulize the original ports on a map \n",
+    "# Check terminal duplicates\n",
+    "df_terminal=pd.DataFrame(df_ports.Terminal)\n",
+    "counts_all=check_valsCount(df_terminal)\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"No duplicate terminals any more !\")\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "\n",
+    "# visulize original ports \n",
     "bbox=(df_ports.Lat.min(),df_ports.Lat.max(),df_ports.Lon.min(),df_ports.Lon.max())                                                        \n",
     "print (\"The respective minimum and maximum latitude and longitude coordiates of ports are:\",bbox)\n",
     "\n",
@@ -526,13 +340,19 @@
     "m = Basemap(projection='cyl', resolution='l',\n",
     "            llcrnrlat=bbox[0], urcrnrlat=bbox[1],\n",
     "            llcrnrlon=bbox[2], urcrnrlon=bbox[3])\n",
-    "\n",
     "ax.scatter(df_ports.Lon,df_ports.Lat,zorder=1, alpha= 1, c='r', s=20)\n",
     "draw_map(m)\n",
     "\n",
     "ax.set_xlim(bbox[2],bbox[3]);\n",
     "ax.set_ylim(bbox[0],bbox[1]);\n",
     "fig.savefig(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/portsOriginal_1.png\",dpi=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step b):  Calculate location distance, and group terminals"
    ]
   },
   {
