--- a/journeyPorts_group_display.ipynb
+++ b/journeyPorts_group_display.ipynb
@@ -357,13 +357,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# group all the ports within 100nm.\n",
-    "from math import radians, cos, sin, asin,sqrt\n",
-    "\n",
     "def dist(lat1,lat2,lon1,lon2):\n",
     "    \"\"\"\n",
     "    compute the great-circle distance between two locations on earth.\n",
@@ -372,6 +369,7 @@
     "    \n",
     "    return: numeric; distance, in km\n",
     "    \"\"\" \n",
+    "    from math import radians, cos, sin, asin,sqrt\n",
     "    R=6371  # km\n",
     "    \n",
     "    #  turn to radias\n",
@@ -389,44 +387,15 @@
     "    d=R*c # km\n",
     "    return d\n",
     "\n",
-    "# # test cases\n",
-    "# lat1,lat2=53.32055555555556,53.31861111111111\n",
-    "# long1,long2=-1.7297222222222221,-1.6997222222222223\n",
-    "# d=dist(lat1,lat2,long1,long2)\n",
-    "# print (d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the similar terminals ids as terminal 'Rio Cullen' id are: {1231: [1556, 1687, 1897, 1934]}\n",
-      "the similar terminals as terminal 'Rio Cullen' are: {'Rio Cullen': ['San Sebastian', 'Puerto Sara', 'Cabo Negro Gas Terminal', 'Punta Loyola']}\n"
-     ]
-    }
-   ],
-   "source": [
     "def similar_terminal(df, ix1, lat1, lon1,dist_ref=100 * 1.852):\n",
     "    \"\"\"\n",
-    "    Given a set of locations (index,latitude, longitude), compute the distance between this location\n",
-    "    and all the other locations in given dataframe, Extract all the ids of similar terminals when dist is not larger than dist_ref.\n",
+    "    Given a location (ix1,lat1, lon1), compute the distance between this single location and all other locations in dataframe.\n",
+    "    Then, extract all the ids of similar terminals when dist is not larger than dist_ref.\n",
     "    \n",
     "    df:dataFrame\n",
-    "    ix1,lat1,lon1: sorted index of each row,latitude, longitude\n",
+    "    ix1,lat1,lon1: index of each row, latitude, longitude\n",
     "    dist_ref: reference distance,the default is 185.2km\n",
-    "    return:ids dict, terminals dict\n",
+    "    return:ids dict; terminals dict\n",
     "    \"\"\"\n",
     "    similars_ids_single = {}\n",
     "    similars_terminals_single = {}\n",
@@ -447,18 +416,6 @@
     "        return similars_ids_single, similars_terminals_single\n",
     "    return None\n",
     "\n",
-    "# test case\n",
-    "similars_ids_single,similars_terminals_single=similar_terminal(df_ports,1231,-52.81843,-68.16315)\n",
-    "print (\"the similar terminals ids as terminal 'Rio Cullen' id are:\",similars_ids_single)\n",
-    "print (\"the similar terminals as terminal 'Rio Cullen' are:\",similars_terminals_single)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def similar_terminals(df):\n",
     "    \"\"\"\n",
     "    compute all similar terminals, given a dataframe\n",
@@ -473,111 +430,63 @@
     "        temp_id, temp_terminals = similar_terminal(df, id1, lat1, lon1)\n",
     "        similars_ids_all.append(temp_id)\n",
     "        similars_terminals_all.append(temp_terminals)\n",
-    "    return similars_ids_all, similars_terminals_all"
+    "    return similars_ids_all, similars_terminals_all\n",
+    "\n",
+    "def groupSame(df,portCommon=\"Rio Cullen\",group_id=[1231,1556, 1687, 1897, 1934],sortValue=\"number of call all\"):\n",
+    "    \"\"\"\n",
+    "    Group dataframe with given idx, and sort it in a descend way.\n",
+    "    sorted the dataframe by sortValue in a descend way\n",
+    "    \n",
+    "    df: dataframe\n",
+    "    portCommon: string, terminal used as the common port name of a group of close terminals\n",
+    "    group_id: list; index of all the similar terminals,including portCommon itself. \n",
+    "    sortValue: string, used for sorting of dataframe\n",
+    "    \"\"\"\n",
+    "    df_similar=df_ports.loc[group_id]\n",
+    "    df_similar.sort_values(axis=0,by=[sortValue],ascending=False,inplace=True)\n",
+    "    return df_similar\n",
+    "\n",
+    "# # test case for dist() function\n",
+    "# lat1,lat2=53.32055555555556,53.31861111111111\n",
+    "# long1,long2=-1.7297222222222221,-1.6997222222222223\n",
+    "# d=dist(lat1,lat2,long1,long2)\n",
+    "# print (d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The name of all similar terminals (first 2 items): [{'Singapore': ['Oiltanking Singapore Terminal', 'Universal Oil Terminal', 'ExxonMobil Terminal', 'Vopak Sebarok Terminal', 'Tanjung Bin', 'Vopak Banyan Terminal', 'Pulau Busing Terminal', 'Horizon Singapore Terminal', 'TLP Liquid Cargo Terminal', 'Pulau Bukom Refinery', 'Pengerang Deepwater Terminal', 'SRC Terminal', 'Pasir Gudang Edible Oil Terminal', 'Tanjung Pelepas', 'Seraya Power Station Terminal', 'Pasir Gudang Non-Edible Liquid Terminal', 'Oiltanking Helios Terminal', 'Vopak Sakra Terminal', 'Vopak Penjuru Terminal', 'Tanjung Uban', 'ExxonMobil Aromatics Terminal', 'SPC Terminal', 'Oiltanking Karimun Terminal', 'Tomakomai Minami Terminal', 'Kabil', 'Chevron Oronite Terminal', 'Stolthaven Terminal', 'Sembawang', 'Pasir Gudang Break Bulk Terminal', 'Pulau Sambu', 'Tuas Boulevard Shipyard', 'Karimun Besar', 'Keppel Singmarine', 'Batam', 'Keppel FELS', 'Malaysia Marine and Heavy Engineering', 'Sungai Pakning', 'PaxOcean Singapore', 'ASL Marine', 'Pasir Panjang Container Terminal 2', 'Drydocks World Pertama', 'Singapore Technologies Engineering', 'Jurong', 'Pasir Panjang Container Terminal 6', 'Pasir Gudang Container Terminal', 'Batu Pahat', 'Brani Container Terminal', 'Keppel Container Terminal', 'Singapore LNG Terminal', 'Tanjong Pagar Container Terminal', 'Pasir Gudang Gas Power Plant', 'Pasir Panjang Container Terminal 5', 'Marinteknik Fast Ferries', 'Pasir Panjang Container Terminal 1', 'Tanjung Setapa MOLF Terminal', 'United Sindo Perkasa', 'Pulau Tekong', 'Nanindah Mutiara', 'Pasir Gudang Multi-Purpose Terminal', 'Kim Seah Shipyard', 'Sekupang', 'Jurong Port', 'Jurong Port East Terminal', 'Marco Polo Shipyard', 'Pengerang LNG Terminal', 'Marina Bay Cruise Terminal', 'Pasir Gudang Dry Bulk Terminal', 'Jurong Port Tank Terminal']}, {'PTP Terminal': ['Ust-Luga Oil Terminal', 'Novatek Terminal', 'Neste Porvoo Refinery', 'Petersburg Oil Terminal', 'Vysotsk', 'Sibur LPG Terminal', 'Primorsk', 'Sillamae', 'Alexela Sillamae Terminal', 'Ust-Luga', 'Porvoo', 'Vysotsk Oil Terminal', 'Sillamae Silsteve Terminal', 'Oljysatama Paksuniemi', 'St Petersburg', 'Severnaya Verf', 'Kotka Liquid Terminal', 'Ust-Luga Container Terminal', 'Kronshtadt', 'Kotka', 'Hamina']}]\n"
+      "the similar terminals ids as terminal 'Rio Cullen' id are: {1231: [1556, 1687, 1897, 1934]}\n",
+      "----------------------------------------------------------------------------------------------------------------------\n",
+      "the similar terminals as terminal 'Rio Cullen' are: {'Rio Cullen': ['San Sebastian', 'Puerto Sara', 'Cabo Negro Gas Terminal', 'Punta Loyola']}\n",
+      "----------------------------------------------------------------------------------------------------------------------\n",
+      "The name of all similar terminals (first 2 items): [{'Singapore': ['Oiltanking Singapore Terminal', 'Universal Oil Terminal', 'ExxonMobil Terminal', 'Vopak Sebarok Terminal', 'Tanjung Bin', 'Vopak Banyan Terminal', 'Pulau Busing Terminal', 'Horizon Singapore Terminal', 'TLP Liquid Cargo Terminal', 'Pulau Bukom Refinery', 'Pengerang Deepwater Terminal', 'SRC Terminal', 'Pasir Gudang Edible Oil Terminal', 'Tanjung Pelepas', 'Seraya Power Station Terminal', 'Pasir Gudang Non-Edible Liquid Terminal', 'Oiltanking Helios Terminal', 'Vopak Sakra Terminal', 'Vopak Penjuru Terminal', 'Tanjung Uban', 'ExxonMobil Aromatics Terminal', 'SPC Terminal', 'Oiltanking Karimun Terminal', 'Tomakomai Minami Terminal', 'Kabil', 'Chevron Oronite Terminal', 'Stolthaven Terminal', 'Sembawang', 'Pasir Gudang Break Bulk Terminal', 'Pulau Sambu', 'Tuas Boulevard Shipyard', 'Karimun Besar', 'Keppel Singmarine', 'Batam', 'Keppel FELS', 'Malaysia Marine and Heavy Engineering', 'Sungai Pakning', 'PaxOcean Singapore', 'ASL Marine', 'Pasir Panjang Container Terminal 2', 'Drydocks World Pertama', 'Singapore Technologies Engineering', 'Jurong', 'Pasir Panjang Container Terminal 6', 'Pasir Gudang Container Terminal', 'Batu Pahat', 'Brani Container Terminal', 'Keppel Container Terminal', 'Singapore LNG Terminal', 'Tanjong Pagar Container Terminal', 'Pasir Gudang Gas Power Plant', 'Pasir Panjang Container Terminal 5', 'Marinteknik Fast Ferries', 'Pasir Panjang Container Terminal 1', 'Tanjung Setapa MOLF Terminal', 'United Sindo Perkasa', 'Pulau Tekong', 'Nanindah Mutiara', 'Pasir Gudang Multi-Purpose Terminal', 'Kim Seah Shipyard', 'Sekupang', 'Jurong Port', 'Jurong Port East Terminal', 'Marco Polo Shipyard', 'Pengerang LNG Terminal', 'Marina Bay Cruise Terminal', 'Pasir Gudang Dry Bulk Terminal', 'Jurong Port Tank Terminal']}]\n",
+      "----------------------------------------------------------------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "# test case for similar_terminal()\n",
+    "similars_ids_single,similars_terminals_single=similar_terminal(df_ports,1231,-52.81843,-68.16315)\n",
+    "print (df_ports[df_ports.Terminal==\"Rio Cullen\"])\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"the similar terminals ids as terminal 'Rio Cullen' id are:\",similars_ids_single)\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"the similar terminals as terminal 'Rio Cullen' are:\",similars_terminals_single)\n",
+    "\n",
+    "# compute all similar termilars in df_ports\n",
     "similars_ids_all,similars_terminals_all=similar_terminals(df_ports)\n",
-    "print (\"The name of all similar terminals (first 2 items):\",similars_terminals_all[:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the ids of all the similar terminals are: [{0: [9, 13, 18, 29, 38, 39, 41, 66, 94, 95, 139, 177, 189, 218, 230, 252, 268, 341, 461, 504, 519, 580, 698, 759, 764, 785, 874, 1060, 1093, 1120, 1139, 1201, 1390, 1394, 1426, 1504, 1676, 1681, 1777, 1996, 2122, 2138, 2156, 2176, 2303, 2351, 2371, 2380, 2432, 2550, 2583, 2679, 2702, 2727, 2732, 2741, 2908, 2936, 2986, 3018, 3019, 3122, 3214, 3215, 3246, 3252, 3256, 3271]}, {1: [15, 62, 91, 136, 186, 337, 349, 574, 660, 744, 871, 1006, 1190, 1563, 1595, 2265, 2291, 2421, 2720, 2752, 3184]}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (\"the ids of all the similar terminals are:\",similars_ids_all[:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Terminal</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>number of call start</th>\n",
-       "      <th>number of call end</th>\n",
-       "      <th>number of call all</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1231</th>\n",
-       "      <td>Rio Cullen</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>-52.81843</td>\n",
-       "      <td>-68.16315</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>113.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Terminal    Country       Lat       Lon  number of call start  \\\n",
-       "1231  Rio Cullen  Argentina -52.81843 -68.16315                  57.0   \n",
-       "\n",
-       "      number of call end  number of call all  \n",
-       "1231                56.0               113.0  "
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_ports[df_ports.Terminal==\"Rio Cullen\"]"
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"The name of all similar terminals (first 2 items):\",similars_terminals_all[:1])\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
+    "print (\"the ids of all the similar terminals are:\",similars_ids_all[:1])\n",
+    "print (\"----------------------------------------------------------------------------------------------------------------------\")"
    ]
   },
   {
@@ -692,20 +601,6 @@
     }
    ],
    "source": [
-    "def groupSame(df,portCommon=\"Rio Cullen\",group_id=[1231,1556, 1687, 1897, 1934],sortValue=\"number of call all\"):\n",
-    "    \"\"\"\n",
-    "    Group dataframe with given idx, and sort it in a descend way.\n",
-    "    sorted the dataframe by sortValue in a descend way\n",
-    "    \n",
-    "    df: dataframe\n",
-    "    portCommon: string, terminal used as the common port name of a group of close terminals\n",
-    "    group_id: list; index of all the similar terminals,including portCommon itself. \n",
-    "    sortValue: string, used for sorting of dataframe\n",
-    "    \"\"\"\n",
-    "    df_similar=df_ports.loc[group_id]\n",
-    "    df_similar.sort_values(axis=0,by=[sortValue],ascending=False,inplace=True)\n",
-    "    return df_similar\n",
-    "    \n",
     "df_similar=groupSame(df_ports)\n",
     "df_similar.head(10)"
    ]
